assignment5/assgn5_19CS30033_19CS30036.output
Terminals unused in grammar

    AUTO
    REGISTER
    STRUCT
    TYPEDEF
    UNION
    HASH


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 F: %empty

    3 W: %empty

    4 D: %empty

    5 X: %empty

    6 N: %empty

    7 changetable: %empty

    8 primary_expression: IDENTIFIER
    9                   | INTEGER_CONSTANT
   10                   | FLOATING_CONSTANT
   11                   | CHARACTER_CONSTANT
   12                   | STRING_LITERAL
   13                   | '(' expression ')'

   14 postfix_expression: primary_expression
   15                   | postfix_expression '[' expression ']'
   16                   | postfix_expression '(' argument_expression_list_opt ')'
   17                   | postfix_expression DOT IDENTIFIER
   18                   | postfix_expression ARROW IDENTIFIER
   19                   | postfix_expression INCREMENT
   20                   | postfix_expression DECREMENT
   21                   | '(' type_name ')' '{' initializer_list '}'
   22                   | '(' type_name ')' '{' initializer_list COMMA '}'

   23 argument_expression_list_opt: argument_expression_list
   24                             | %empty

   25 argument_expression_list: assignment_expression
   26                         | argument_expression_list COMMA assignment_expression

   27 unary_expression: postfix_expression
   28                 | INCREMENT unary_expression
   29                 | DECREMENT unary_expression
   30                 | unary_operator cast_expression
   31                 | SIZEOF unary_expression
   32                 | SIZEOF '(' type_name ')'

   33 unary_operator: BITWISEAND
   34               | STAR
   35               | PLUS
   36               | MINUS
   37               | NOT
   38               | EXCLAMATION

   39 cast_expression: unary_expression
   40                | '(' type_name ')' cast_expression

   41 multiplicative_expression: cast_expression
   42                          | multiplicative_expression STAR cast_expression
   43                          | multiplicative_expression DIVIDE cast_expression
   44                          | multiplicative_expression PERCENTAGE cast_expression

   45 additive_expression: multiplicative_expression
   46                    | additive_expression PLUS multiplicative_expression
   47                    | additive_expression MINUS multiplicative_expression

   48 shift_expression: additive_expression
   49                 | shift_expression LEFTSHIFT additive_expression
   50                 | shift_expression RIGHTSHIFT additive_expression

   51 relational_expression: shift_expression
   52                      | relational_expression LESSTHAN shift_expression
   53                      | relational_expression GREATERTHAN shift_expression
   54                      | relational_expression LESSEQUAL shift_expression
   55                      | relational_expression GREATEREQUAL shift_expression

   56 equality_expression: relational_expression
   57                    | equality_expression EQUAL relational_expression
   58                    | equality_expression NOTEQUAL relational_expression

   59 and_expression: equality_expression
   60               | and_expression BITWISEAND equality_expression

   61 exclusive_or_expression: and_expression
   62                        | exclusive_or_expression XOR and_expression

   63 inclusive_or_expression: exclusive_or_expression
   64                        | inclusive_or_expression BITWISEOR exclusive_or_expression

   65 logical_and_expression: inclusive_or_expression
   66                       | logical_and_expression AND M inclusive_or_expression

   67 logical_or_expression: logical_and_expression
   68                      | logical_or_expression OR M logical_and_expression

   69 conditional_expression: logical_or_expression
   70                       | logical_or_expression N QUESTIONMARK M expression N COLON M conditional_expression

   71 assignment_expression: conditional_expression
   72                      | unary_expression assignment_operator assignment_expression

   73 assignment_operator: ASSIGN
   74                    | MULTIPLYEQUAL
   75                    | DIVIDEEQUAL
   76                    | MODULOEQUAL
   77                    | PLUSEQUAL
   78                    | MINUSEQUAL
   79                    | SHIFTLEFTEQUAL
   80                    | SHIFTRIGHTEQUAL
   81                    | ANDEQUAL
   82                    | XOREQUAL
   83                    | OREQUAL

   84 expression: assignment_expression
   85           | expression COMMA assignment_expression

   86 constant_expression: conditional_expression

   87 declaration: declaration_specifiers init_declarator_list SEMICOLON
   88            | declaration_specifiers SEMICOLON

   89 declaration_specifiers: storage_class_specifier declaration_specifiers
   90                       | storage_class_specifier
   91                       | type_specifier declaration_specifiers
   92                       | type_specifier
   93                       | type_qualifier declaration_specifiers
   94                       | type_qualifier
   95                       | function_specifier declaration_specifiers
   96                       | function_specifier

   97 init_declarator_list: init_declarator
   98                     | init_declarator_list COMMA init_declarator

   99 init_declarator: declarator
  100                | declarator ASSIGN initializer

  101 storage_class_specifier: EXTERN
  102                        | STATIC

  103 type_specifier: VOID
  104               | CHAR
  105               | SHORT
  106               | INT
  107               | LONG
  108               | FLOAT
  109               | DOUBLE
  110               | SIGNED
  111               | UNSIGNED
  112               | BOOL
  113               | COMPLEX
  114               | IMAGINARY
  115               | enum_specifier

  116 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  117                         | type_qualifier specifier_qualifier_list_opt

  118 specifier_qualifier_list_opt: %empty
  119                             | specifier_qualifier_list

  120 enum_specifier: ENUM identifier_opt '{' enumerator_list '}'
  121               | ENUM identifier_opt '{' enumerator_list COMMA '}'
  122               | ENUM IDENTIFIER

  123 identifier_opt: %empty
  124               | IDENTIFIER

  125 enumerator_list: enumerator
  126                | enumerator_list COMMA enumerator

  127 enumerator: IDENTIFIER
  128           | IDENTIFIER ASSIGN constant_expression

  129 type_qualifier: CONST
  130               | RESTRICT
  131               | VOLATILE

  132 function_specifier: INLINE

  133 declarator: pointer direct_declarator
  134           | direct_declarator

  135 direct_declarator: IDENTIFIER
  136                  | '(' declarator ')'
  137                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  138                  | direct_declarator '[' type_qualifier_list ']'
  139                  | direct_declarator '[' assignment_expression ']'
  140                  | direct_declarator '[' ']'
  141                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  142                  | direct_declarator '[' STATIC assignment_expression ']'
  143                  | direct_declarator '[' type_qualifier_list STAR ']'
  144                  | direct_declarator '[' STAR ']'
  145                  | direct_declarator '(' changetable parameter_type_list ')'
  146                  | direct_declarator '(' identifier_list ')'
  147                  | direct_declarator '(' changetable ')'

  148 type_qualifier_list_opt: %empty
  149                        | type_qualifier_list

  150 pointer: STAR type_qualifier_list_opt
  151        | STAR type_qualifier_list_opt pointer

  152 type_qualifier_list: type_qualifier
  153                    | type_qualifier_list type_qualifier

  154 parameter_type_list: parameter_list
  155                    | parameter_list COMMA ELLIPSIS

  156 parameter_list: parameter_declaration
  157               | parameter_list COMMA parameter_declaration

  158 parameter_declaration: declaration_specifiers declarator
  159                      | declaration_specifiers

  160 identifier_list: IDENTIFIER
  161                | identifier_list COMMA IDENTIFIER

  162 type_name: specifier_qualifier_list

  163 initializer: assignment_expression
  164            | '{' initializer_list '}'
  165            | '{' initializer_list COMMA '}'

  166 initializer_list: designation_opt initializer
  167                 | initializer_list COMMA designation_opt initializer

  168 designation_opt: %empty
  169                | designation

  170 designation: designator_list ASSIGN

  171 designator_list: designator
  172                | designator_list designator

  173 designator: '[' constant_expression ']'
  174           | DOT IDENTIFIER

  175 statement: labeled_statement
  176          | compound_statement
  177          | expression_statement
  178          | selection_statement
  179          | iteration_statement
  180          | jump_statement

  181 loop_statement: labeled_statement
  182               | expression_statement
  183               | selection_statement
  184               | iteration_statement
  185               | jump_statement

  186 labeled_statement: IDENTIFIER COLON M statement
  187                  | CASE constant_expression COLON statement
  188                  | DEFAULT COLON statement

  189 compound_statement: '{' X changetable block_item_list_opt '}'

  190 block_item_list_opt: %empty
  191                    | block_item_list

  192 block_item_list: block_item
  193                | block_item_list M block_item

  194 block_item: declaration
  195           | statement

  196 expression_statement: expression SEMICOLON
  197                     | SEMICOLON

  198 selection_statement: IF '(' expression N ')' M statement N
  199                    | IF '(' expression N ')' M statement N ELSE M statement
  200                    | SWITCH '(' expression ')' statement

  201 iteration_statement: WHILE W '(' X changetable M expression ')' M loop_statement
  202                    | WHILE W '(' X changetable M expression ')' '{' M block_item_list_opt '}'
  203                    | DO D M loop_statement M WHILE '(' expression ')' SEMICOLON
  204                    | DO D '{' M block_item_list_opt '}' M WHILE '(' expression ')' SEMICOLON
  205                    | FOR F '(' X changetable declaration M expression_statement M expression N ')' M loop_statement
  206                    | FOR F '(' X changetable expression_statement M expression_statement M expression N ')' M loop_statement
  207                    | FOR F '(' X changetable declaration M expression_statement M expression N ')' M '{' block_item_list_opt '}'
  208                    | FOR F '(' X changetable expression_statement M expression_statement M expression N ')' M '{' block_item_list_opt '}'

  209 jump_statement: GOTO IDENTIFIER SEMICOLON
  210               | CONTINUE SEMICOLON
  211               | BREAK SEMICOLON
  212               | RETURN expression SEMICOLON
  213               | RETURN SEMICOLON

  214 translation_unit: external_declaration
  215                 | translation_unit external_declaration

  216 external_declaration: function_definition
  217                     | declaration

  218 function_definition: declaration_specifiers declarator declaration_list_opt changetable '{' block_item_list_opt '}'

  219 declaration_list: declaration
  220                 | declaration_list declaration

  221 declaration_list_opt: %empty
  222                     | declaration_list


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 13 16 21 22 32 40 136 145 146 147 198 199 200 201 202 203 204 205 206 207 208
    ')' (41) 13 16 21 22 32 40 136 145 146 147 198 199 200 201 202 203 204 205 206 207 208
    '[' (91) 15 137 138 139 140 141 142 143 144 173
    ']' (93) 15 137 138 139 140 141 142 143 144 173
    '{' (123) 21 22 120 121 164 165 189 202 204 207 208 218
    '}' (125) 21 22 120 121 164 165 189 202 204 207 208 218
    error (256)
    AUTO (258)
    BREAK (259) 211
    CASE (260) 187
    CHAR (261) 104
    CONST (262) 129
    CONTINUE (263) 210
    DEFAULT (264) 188
    DO (265) 203 204
    ELSE (266) 199
    ENUM (267) 120 121 122
    EXTERN (268) 101
    REGISTER (269)
    FLOAT (270) 108
    FOR (271) 205 206 207 208
    GOTO (272) 209
    IF (273) 198 199
    INLINE (274) 132
    LONG (275) 107
    RESTRICT (276) 130
    RETURN (277) 212 213
    SHORT (278) 105
    SIGNED (279) 110
    SIZEOF (280) 31 32
    STATIC (281) 102 141 142
    STRUCT (282)
    SWITCH (283) 200
    INT (284) 106
    DOUBLE (285) 109
    TYPEDEF (286)
    UNION (287)
    UNSIGNED (288) 111
    VOID (289) 103
    VOLATILE (290) 131
    WHILE (291) 201 202 203 204
    BOOL (292) 112
    COMPLEX (293) 113
    IMAGINARY (294) 114
    IDENTIFIER <sym> (295) 8 17 18 122 124 127 128 135 160 161 174 186 209
    INTEGER_CONSTANT <intVal> (296) 9
    FLOATING_CONSTANT <floatVal> (297) 10
    CHARACTER_CONSTANT <charVal> (298) 11
    STRING_LITERAL <charVal> (299) 12
    DOT (300) 17 174
    ARROW (301) 18
    INCREMENT (302) 19 28
    DECREMENT (303) 20 29
    BITWISEAND (304) 33 60
    STAR (305) 34 42 143 144 150 151
    PLUS (306) 35 46
    MINUS (307) 36 47
    NOT (308) 37
    EXCLAMATION (309) 38
    DIVIDE (310) 43
    PERCENTAGE (311) 44
    LEFTSHIFT (312) 49
    RIGHTSHIFT (313) 50
    LESSTHAN (314) 52
    GREATERTHAN (315) 53
    LESSEQUAL (316) 54
    GREATEREQUAL (317) 55
    EQUAL (318) 57
    NOTEQUAL (319) 58
    XOR (320) 62
    BITWISEOR (321) 64
    AND (322) 66
    OR (323) 68
    QUESTIONMARK (324) 70
    COLON (325) 70 186 187 188
    SEMICOLON (326) 87 88 196 197 203 204 209 210 211 212 213
    ELLIPSIS (327) 155
    ASSIGN (328) 73 100 128 170
    MULTIPLYEQUAL (329) 74
    DIVIDEEQUAL (330) 75
    MODULOEQUAL (331) 76
    PLUSEQUAL (332) 77
    MINUSEQUAL (333) 78
    SHIFTLEFTEQUAL (334) 79
    SHIFTRIGHTEQUAL (335) 80
    ANDEQUAL (336) 81
    XOREQUAL (337) 82
    OREQUAL (338) 83
    COMMA (339) 22 26 85 98 121 126 155 157 161 165 167
    HASH (340)
    "then" (341)


Nonterminals, with rules where they appear

    $accept (93)
        on left: 0
    M <instrNum> (94)
        on left: 1
        on right: 66 68 70 186 193 198 199 201 202 203 204 205 206 207 208
    F (95)
        on left: 2
        on right: 205 206 207 208
    W (96)
        on left: 3
        on right: 201 202
    D (97)
        on left: 4
        on right: 203 204
    X (98)
        on left: 5
        on right: 189 201 202 205 206 207 208
    N <stmt> (99)
        on left: 6
        on right: 70 198 199 205 206 207 208
    changetable (100)
        on left: 7
        on right: 145 147 189 201 202 205 206 207 208 218
    primary_expression <exp> (101)
        on left: 8 9 10 11 12 13
        on right: 14
    postfix_expression <arr> (102)
        on left: 14 15 16 17 18 19 20 21 22
        on right: 15 16 17 18 19 20 27
    argument_expression_list_opt <numParams> (103)
        on left: 23 24
        on right: 16
    argument_expression_list <numParams> (104)
        on left: 25 26
        on right: 23 26
    unary_expression <arr> (105)
        on left: 27 28 29 30 31 32
        on right: 28 29 31 39 72
    unary_operator <unaryOp> (106)
        on left: 33 34 35 36 37 38
        on right: 30
    cast_expression <arr> (107)
        on left: 39 40
        on right: 30 40 41 42 43 44
    multiplicative_expression <exp> (108)
        on left: 41 42 43 44
        on right: 42 43 44 45 46 47
    additive_expression <exp> (109)
        on left: 45 46 47
        on right: 46 47 48 49 50
    shift_expression <exp> (110)
        on left: 48 49 50
        on right: 49 50 51 52 53 54 55
    relational_expression <exp> (111)
        on left: 51 52 53 54 55
        on right: 52 53 54 55 56 57 58
    equality_expression <exp> (112)
        on left: 56 57 58
        on right: 57 58 59 60
    and_expression <exp> (113)
        on left: 59 60
        on right: 60 61 62
    exclusive_or_expression <exp> (114)
        on left: 61 62
        on right: 62 63 64
    inclusive_or_expression <exp> (115)
        on left: 63 64
        on right: 64 65 66
    logical_and_expression <exp> (116)
        on left: 65 66
        on right: 66 67 68
    logical_or_expression <exp> (117)
        on left: 67 68
        on right: 68 69 70
    conditional_expression <exp> (118)
        on left: 69 70
        on right: 70 71 86
    assignment_expression <exp> (119)
        on left: 71 72
        on right: 25 26 72 84 85 137 139 141 142 163
    assignment_operator (120)
        on left: 73 74 75 76 77 78 79 80 81 82 83
        on right: 72
    expression <exp> (121)
        on left: 84 85
        on right: 13 15 70 85 196 198 199 200 201 202 203 204 205 206 207 208 212
    constant_expression (122)
        on left: 86
        on right: 128 173 187
    declaration (123)
        on left: 87 88
        on right: 194 205 207 217 219 220
    declaration_specifiers (124)
        on left: 89 90 91 92 93 94 95 96
        on right: 87 88 89 91 93 95 158 159 218
    init_declarator_list (125)
        on left: 97 98
        on right: 87 98
    init_declarator <sym> (126)
        on left: 99 100
        on right: 97 98
    storage_class_specifier (127)
        on left: 101 102
        on right: 89 90
    type_specifier (128)
        on left: 103 104 105 106 107 108 109 110 111 112 113 114 115
        on right: 91 92 116
    specifier_qualifier_list (129)
        on left: 116 117
        on right: 119 162
    specifier_qualifier_list_opt (130)
        on left: 118 119
        on right: 116 117
    enum_specifier (131)
        on left: 120 121 122
        on right: 115
    identifier_opt (132)
        on left: 123 124
        on right: 120 121
    enumerator_list (133)
        on left: 125 126
        on right: 120 121 126
    enumerator (134)
        on left: 127 128
        on right: 125 126
    type_qualifier (135)
        on left: 129 130 131
        on right: 93 94 117 152 153
    function_specifier (136)
        on left: 132
        on right: 95 96
    declarator <sym> (137)
        on left: 133 134
        on right: 99 100 136 158 218
    direct_declarator <sym> (138)
        on left: 135 136 137 138 139 140 141 142 143 144 145 146 147
        on right: 133 134 137 138 139 140 141 142 143 144 145 146 147
    type_qualifier_list_opt (139)
        on left: 148 149
        on right: 150 151
    pointer <stype> (140)
        on left: 150 151
        on right: 133 151
    type_qualifier_list (141)
        on left: 152 153
        on right: 137 138 141 143 149 153
    parameter_type_list (142)
        on left: 154 155
        on right: 145
    parameter_list (143)
        on left: 156 157
        on right: 154 155 157
    parameter_declaration (144)
        on left: 158 159
        on right: 156 157
    identifier_list (145)
        on left: 160 161
        on right: 146 161
    type_name (146)
        on left: 162
        on right: 21 22 32 40
    initializer <sym> (147)
        on left: 163 164 165
        on right: 100 166 167
    initializer_list (148)
        on left: 166 167
        on right: 21 22 164 165 167
    designation_opt (149)
        on left: 168 169
        on right: 166 167
    designation (150)
        on left: 170
        on right: 169
    designator_list (151)
        on left: 171 172
        on right: 170 172
    designator (152)
        on left: 173 174
        on right: 171 172
    statement <stmt> (153)
        on left: 175 176 177 178 179 180
        on right: 186 187 188 195 198 199 200
    loop_statement <stmt> (154)
        on left: 181 182 183 184 185
        on right: 201 203 205 206
    labeled_statement <stmt> (155)
        on left: 186 187 188
        on right: 175 181
    compound_statement <stmt> (156)
        on left: 189
        on right: 176
    block_item_list_opt <stmt> (157)
        on left: 190 191
        on right: 189 202 204 207 208 218
    block_item_list <stmt> (158)
        on left: 192 193
        on right: 191 193
    block_item <stmt> (159)
        on left: 194 195
        on right: 192 193
    expression_statement <exp> (160)
        on left: 196 197
        on right: 177 182 205 206 207 208
    selection_statement <stmt> (161)
        on left: 198 199 200
        on right: 178 183
    iteration_statement <stmt> (162)
        on left: 201 202 203 204 205 206 207 208
        on right: 179 184
    jump_statement <stmt> (163)
        on left: 209 210 211 212 213
        on right: 180 185
    translation_unit (164)
        on left: 214 215
        on right: 0 215
    external_declaration (165)
        on left: 216 217
        on right: 214 215
    function_definition (166)
        on left: 218
        on right: 216
    declaration_list (167)
        on left: 219 220
        on right: 220 222
    declaration_list_opt (168)
        on left: 221 222
        on right: 218


State 0

    0 $accept: . translation_unit $end

    CHAR       shift, and go to state 1
    CONST      shift, and go to state 2
    ENUM       shift, and go to state 3
    EXTERN     shift, and go to state 4
    FLOAT      shift, and go to state 5
    INLINE     shift, and go to state 6
    LONG       shift, and go to state 7
    RESTRICT   shift, and go to state 8
    SHORT      shift, and go to state 9
    SIGNED     shift, and go to state 10
    STATIC     shift, and go to state 11
    INT        shift, and go to state 12
    DOUBLE     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    VOID       shift, and go to state 15
    VOLATILE   shift, and go to state 16
    BOOL       shift, and go to state 17
    COMPLEX    shift, and go to state 18
    IMAGINARY  shift, and go to state 19

    declaration              go to state 20
    declaration_specifiers   go to state 21
    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    enum_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26
    translation_unit         go to state 27
    external_declaration     go to state 28
    function_definition      go to state 29


State 1

  104 type_specifier: CHAR .

    $default  reduce using rule 104 (type_specifier)


State 2

  129 type_qualifier: CONST .

    $default  reduce using rule 129 (type_qualifier)


State 3

  120 enum_specifier: ENUM . identifier_opt '{' enumerator_list '}'
  121               | ENUM . identifier_opt '{' enumerator_list COMMA '}'
  122               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 30

    $default  reduce using rule 123 (identifier_opt)

    identifier_opt  go to state 31


State 4

  101 storage_class_specifier: EXTERN .

    $default  reduce using rule 101 (storage_class_specifier)


State 5

  108 type_specifier: FLOAT .

    $default  reduce using rule 108 (type_specifier)


State 6

  132 function_specifier: INLINE .

    $default  reduce using rule 132 (function_specifier)


State 7

  107 type_specifier: LONG .

    $default  reduce using rule 107 (type_specifier)


State 8

  130 type_qualifier: RESTRICT .

    $default  reduce using rule 130 (type_qualifier)


State 9

  105 type_specifier: SHORT .

    $default  reduce using rule 105 (type_specifier)


State 10

  110 type_specifier: SIGNED .

    $default  reduce using rule 110 (type_specifier)


State 11

  102 storage_class_specifier: STATIC .

    $default  reduce using rule 102 (storage_class_specifier)


State 12

  106 type_specifier: INT .

    $default  reduce using rule 106 (type_specifier)


State 13

  109 type_specifier: DOUBLE .

    $default  reduce using rule 109 (type_specifier)


State 14

  111 type_specifier: UNSIGNED .

    $default  reduce using rule 111 (type_specifier)


State 15

  103 type_specifier: VOID .

    $default  reduce using rule 103 (type_specifier)


State 16

  131 type_qualifier: VOLATILE .

    $default  reduce using rule 131 (type_qualifier)


State 17

  112 type_specifier: BOOL .

    $default  reduce using rule 112 (type_specifier)


State 18

  113 type_specifier: COMPLEX .

    $default  reduce using rule 113 (type_specifier)


State 19

  114 type_specifier: IMAGINARY .

    $default  reduce using rule 114 (type_specifier)


State 20

  217 external_declaration: declaration .

    $default  reduce using rule 217 (external_declaration)


State 21

   87 declaration: declaration_specifiers . init_declarator_list SEMICOLON
   88            | declaration_specifiers . SEMICOLON
  218 function_definition: declaration_specifiers . declarator declaration_list_opt changetable '{' block_item_list_opt '}'

    IDENTIFIER  shift, and go to state 32
    STAR        shift, and go to state 33
    SEMICOLON   shift, and go to state 34
    '('         shift, and go to state 35

    init_declarator_list  go to state 36
    init_declarator       go to state 37
    declarator            go to state 38
    direct_declarator     go to state 39
    pointer               go to state 40


State 22

   89 declaration_specifiers: storage_class_specifier . declaration_specifiers
   90                       | storage_class_specifier .

    CHAR       shift, and go to state 1
    CONST      shift, and go to state 2
    ENUM       shift, and go to state 3
    EXTERN     shift, and go to state 4
    FLOAT      shift, and go to state 5
    INLINE     shift, and go to state 6
    LONG       shift, and go to state 7
    RESTRICT   shift, and go to state 8
    SHORT      shift, and go to state 9
    SIGNED     shift, and go to state 10
    STATIC     shift, and go to state 11
    INT        shift, and go to state 12
    DOUBLE     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    VOID       shift, and go to state 15
    VOLATILE   shift, and go to state 16
    BOOL       shift, and go to state 17
    COMPLEX    shift, and go to state 18
    IMAGINARY  shift, and go to state 19

    $default  reduce using rule 90 (declaration_specifiers)

    declaration_specifiers   go to state 41
    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    enum_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26


State 23

   91 declaration_specifiers: type_specifier . declaration_specifiers
   92                       | type_specifier .

    CHAR       shift, and go to state 1
    CONST      shift, and go to state 2
    ENUM       shift, and go to state 3
    EXTERN     shift, and go to state 4
    FLOAT      shift, and go to state 5
    INLINE     shift, and go to state 6
    LONG       shift, and go to state 7
    RESTRICT   shift, and go to state 8
    SHORT      shift, and go to state 9
    SIGNED     shift, and go to state 10
    STATIC     shift, and go to state 11
    INT        shift, and go to state 12
    DOUBLE     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    VOID       shift, and go to state 15
    VOLATILE   shift, and go to state 16
    BOOL       shift, and go to state 17
    COMPLEX    shift, and go to state 18
    IMAGINARY  shift, and go to state 19

    $default  reduce using rule 92 (declaration_specifiers)

    declaration_specifiers   go to state 42
    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    enum_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26


State 24

  115 type_specifier: enum_specifier .

    $default  reduce using rule 115 (type_specifier)


State 25

   93 declaration_specifiers: type_qualifier . declaration_specifiers
   94                       | type_qualifier .

    CHAR       shift, and go to state 1
    CONST      shift, and go to state 2
    ENUM       shift, and go to state 3
    EXTERN     shift, and go to state 4
    FLOAT      shift, and go to state 5
    INLINE     shift, and go to state 6
    LONG       shift, and go to state 7
    RESTRICT   shift, and go to state 8
    SHORT      shift, and go to state 9
    SIGNED     shift, and go to state 10
    STATIC     shift, and go to state 11
    INT        shift, and go to state 12
    DOUBLE     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    VOID       shift, and go to state 15
    VOLATILE   shift, and go to state 16
    BOOL       shift, and go to state 17
    COMPLEX    shift, and go to state 18
    IMAGINARY  shift, and go to state 19

    $default  reduce using rule 94 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    enum_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26


State 26

   95 declaration_specifiers: function_specifier . declaration_specifiers
   96                       | function_specifier .

    CHAR       shift, and go to state 1
    CONST      shift, and go to state 2
    ENUM       shift, and go to state 3
    EXTERN     shift, and go to state 4
    FLOAT      shift, and go to state 5
    INLINE     shift, and go to state 6
    LONG       shift, and go to state 7
    RESTRICT   shift, and go to state 8
    SHORT      shift, and go to state 9
    SIGNED     shift, and go to state 10
    STATIC     shift, and go to state 11
    INT        shift, and go to state 12
    DOUBLE     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    VOID       shift, and go to state 15
    VOLATILE   shift, and go to state 16
    BOOL       shift, and go to state 17
    COMPLEX    shift, and go to state 18
    IMAGINARY  shift, and go to state 19

    $default  reduce using rule 96 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    enum_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26


State 27

    0 $accept: translation_unit . $end
  215 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 45
    CHAR       shift, and go to state 1
    CONST      shift, and go to state 2
    ENUM       shift, and go to state 3
    EXTERN     shift, and go to state 4
    FLOAT      shift, and go to state 5
    INLINE     shift, and go to state 6
    LONG       shift, and go to state 7
    RESTRICT   shift, and go to state 8
    SHORT      shift, and go to state 9
    SIGNED     shift, and go to state 10
    STATIC     shift, and go to state 11
    INT        shift, and go to state 12
    DOUBLE     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    VOID       shift, and go to state 15
    VOLATILE   shift, and go to state 16
    BOOL       shift, and go to state 17
    COMPLEX    shift, and go to state 18
    IMAGINARY  shift, and go to state 19

    declaration              go to state 20
    declaration_specifiers   go to state 21
    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    enum_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26
    external_declaration     go to state 46
    function_definition      go to state 29


State 28

  214 translation_unit: external_declaration .

    $default  reduce using rule 214 (translation_unit)


State 29

  216 external_declaration: function_definition .

    $default  reduce using rule 216 (external_declaration)


State 30

  122 enum_specifier: ENUM IDENTIFIER .
  124 identifier_opt: IDENTIFIER .

    '{'       reduce using rule 124 (identifier_opt)
    $default  reduce using rule 122 (enum_specifier)


State 31

  120 enum_specifier: ENUM identifier_opt . '{' enumerator_list '}'
  121               | ENUM identifier_opt . '{' enumerator_list COMMA '}'

    '{'  shift, and go to state 47


State 32

  135 direct_declarator: IDENTIFIER .

    $default  reduce using rule 135 (direct_declarator)


State 33

  150 pointer: STAR . type_qualifier_list_opt
  151        | STAR . type_qualifier_list_opt pointer

    CONST     shift, and go to state 2
    RESTRICT  shift, and go to state 8
    VOLATILE  shift, and go to state 16

    $default  reduce using rule 148 (type_qualifier_list_opt)

    type_qualifier           go to state 48
    type_qualifier_list_opt  go to state 49
    type_qualifier_list      go to state 50


State 34

   88 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 88 (declaration)


State 35

  136 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 32
    STAR        shift, and go to state 33
    '('         shift, and go to state 35

    declarator         go to state 51
    direct_declarator  go to state 39
    pointer            go to state 40


State 36

   87 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   98 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMICOLON  shift, and go to state 52
    COMMA      shift, and go to state 53


State 37

   97 init_declarator_list: init_declarator .

    $default  reduce using rule 97 (init_declarator_list)


State 38

   99 init_declarator: declarator .
  100                | declarator . ASSIGN initializer
  218 function_definition: declaration_specifiers declarator . declaration_list_opt changetable '{' block_item_list_opt '}'

    CHAR       shift, and go to state 1
    CONST      shift, and go to state 2
    ENUM       shift, and go to state 3
    EXTERN     shift, and go to state 4
    FLOAT      shift, and go to state 5
    INLINE     shift, and go to state 6
    LONG       shift, and go to state 7
    RESTRICT   shift, and go to state 8
    SHORT      shift, and go to state 9
    SIGNED     shift, and go to state 10
    STATIC     shift, and go to state 11
    INT        shift, and go to state 12
    DOUBLE     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    VOID       shift, and go to state 15
    VOLATILE   shift, and go to state 16
    BOOL       shift, and go to state 17
    COMPLEX    shift, and go to state 18
    IMAGINARY  shift, and go to state 19
    ASSIGN     shift, and go to state 54

    '{'       reduce using rule 221 (declaration_list_opt)
    $default  reduce using rule 99 (init_declarator)

    declaration              go to state 55
    declaration_specifiers   go to state 56
    storage_class_specifier  go to state 22
    type_specifier           go to state 23
    enum_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26
    declaration_list         go to state 57
    declaration_list_opt     go to state 58


State 39

  134 declarator: direct_declarator .
  137 direct_declarator: direct_declarator . '[' type_qualifier_list assignment_expression ']'
  138                  | direct_declarator . '[' type_qualifier_list ']'
  139                  | direct_declarator . '[' assignment_expression ']'
  140                  | direct_declarator . '[' ']'
  141                  | direct_declarator . '[' STATIC type_qualifier_list assignment_expression ']'
  142                  | direct_declarator . '[' STATIC assignment_expression ']'
  143                  | direct_declarator . '[' type_qualifier_list STAR ']'
  144                  | direct_declarator . '[' STAR ']'
  145                  | direct_declarator . '(' changetable parameter_type_list ')'
  146                  | direct_declarator . '(' identifier_list ')'
  147                  | direct_declarator . '(' changetable ')'

    '('  shift, and go to state 59
    '['  shift, and go to state 60

    $default  reduce using rule 134 (declarator)


State 40

  133 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 32
    '('         shift, and go to state 35

    direct_declarator  go to state 61


State 41

   89 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 89 (declaration_specifiers)


State 42

   91 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 91 (declaration_specifiers)


State 43

   93 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 93 (declaration_specifiers)


State 44

   95 declaration_specifiers: function_specifier declaration_specifiers .

    $default  reduce using rule 95 (declaration_specifiers)


State 45

    0 $accept: translation_unit $end .

    $default  accept


State 46

  215 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 215 (translation_unit)


State 47

  120 enum_specifier: ENUM identifier_opt '{' . enumerator_list '}'
  121               | ENUM identifier_opt '{' . enumerator_list COMMA '}'

    IDENTIFIER  shift, and go to state 62

    enumerator_list  go to state 63
    enumerator       go to state 64


State 48

  152 type_qualifier_list: type_qualifier .

    $default  reduce using rule 152 (type_qualifier_list)


State 49

  150 pointer: STAR type_qualifier_list_opt .
  151        | STAR type_qualifier_list_opt . pointer

    STAR  shift, and go to state 33

    $default  reduce using rule 150 (pointer)

    pointer  go to state 65


State 50

  149 type_qualifier_list_opt: type_qualifier_list .
  153 type_qualifier_list: type_qualifier_list . type_qualifier
